--- a/simias/src/admin/css/Users.css
+++ b/simias/src/admin/css/Users.css
@@ -1,14 +1,13 @@
 .nav
 {
-	padding-left: 1em;
-	padding-bottom: 1em;
+	padding-left: 12px;
+	padding-bottom: 4px;
 	float: left;
 }
 
 .accountsnav
 {
 	width: 35em;
-	margin-top: .5em;
 }
 
 .accountslist
@@ -82,7 +81,7 @@
 
 .accountsitem2 img
 {
-	padding-left: .2em;
+	padding-left: 4px;
 }
 
 .accountsitem3
@@ -98,33 +97,33 @@
 .searchnav
 {
 	clear: both;
-	padding-bottom: .5em;
+	padding-bottom: 6px;
 }
 
 #DeleteButton
 {
 	float: left;
-	margin-top: .5em;
+	margin-top: 6px;
 }
 
 #DisableButton
 {
 	float: left;
-	margin-top: .5em;
-	margin-left: .3em;
+	margin-top: 6px;
+	margin-left: 4px;
 	width: 5em;
 }
 
 #EnableButton
 {
 	float: left;
-	margin-top: .5em;
-	margin-left: .3em;
+	margin-top: 6px;
+	margin-left: 4px;
 	width: 4.6em;
 }
 
 #CreateButton
 {
 	float: right;
-	margin-top: .5em;
+	margin-top: 6px;
 }
