--- a/simias/src/admin/css/MemberSelect.css
+++ b/simias/src/admin/css/MemberSelect.css
@@ -1,6 +1,10 @@
 .headertitle
 {
-	margin-left: 1em;
+	margin-left: 12px;
+	margin-top: 14px;
+	margin-bottom: 14px;
+	font-size: 1.2em;
+	font-weight: bold;
 }
 
 .tablecolumn
@@ -15,15 +19,15 @@
 
 .memberselectnav
 {
-	padding-left: 1em;
-	padding-bottom: 1em;
+	padding-left: 12px;
+	padding-bottom: 4px;
 	width: 25em;
 }
 
 .okcancelnav
 {
 	clear: both;
-	padding-top: 1em;
+	padding-top: 6px;
 }
 
 .memberlist
@@ -99,16 +103,16 @@
 .searchnav
 {
 	clear: both;
-	margin-left: 1em;
-	padding-bottom: .5em;
+	margin-left: 12px;
+	padding-bottom: 6px;
 }
 
 #CreateiFolderDiv
 {
 	float: left;
 	width: 37em;
-	margin-left: 1em;
-	margin-bottom: 2em;
+	padding-left: 12px;
+	margin-bottom: 24px;
 }
 
 #CreateiFolderDiv td
@@ -133,5 +137,6 @@
 
 #Description
 {
+	overflow: auto;
 	width: 100%;
 }
