improved IE nav look
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6309 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -88,6 +88,7 @@ a:hover
 	background: transparent url(../images/nav.png) left top repeat-x;
 	overflow: hidden;
 	min-height: 80px;
+	padding-bottom: 80px;
 }
 
 #nav .filter
