remove ifolders misc updates
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6311 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -397,7 +397,11 @@ td.seperator
 	vertical-align: top;
 }
 
-#NewiFolderName, #NewiFolderDescription, #iFolderDescription
+#NewiFolderName,
+#NewiFolderDescription,
+#iFolderDescription,
+#NewFolderName,
+#UploadFile
 {
 	width: 30em;
 }
