Fixed problems with long user and ifolder names. Made other minor ui changes.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6313 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/SystemInfo.css
+++ b/simias/src/admin/css/SystemInfo.css
@@ -86,6 +86,7 @@
 
 .adminlistheader .usernamecolumn
 {
+	padding-right: 6px;
 	width: 12em;
 }
 
@@ -117,6 +118,7 @@
 
 .adminitem3
 {
+	padding-right: 6px;
 	width: 10.5em;
 }
 
