--- a/simias/src/admin/css/Users.css
+++ b/simias/src/admin/css/Users.css
@@ -51,6 +51,7 @@
 
 .accountslistheader .fullnamecolumn
 {
+	padding-right: 6px;
 	width: 18em;
 }
 
@@ -91,6 +92,7 @@
 
 .accountsitem4
 {
+	padding-right: 6px;
 	width: 16.2em;
 }
 
