added iFolder list categories for the "Inbox" requirement
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6328 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -212,6 +212,14 @@ div.message
 	background: #E5E5F7;
 }
 
+.allPage #allTab a,
+.newPage #newTab a,
+.ownerPage #ownerTab a,
+.sharedPage #sharedTab a
+{
+	background: #E5E5F7;
+}
+
 /* path */
 
 .path
