Finished error handling code.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6332 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/iFolderAdmin.css
+++ b/simias/src/admin/css/iFolderAdmin.css
@@ -361,7 +361,7 @@ body#users li.users a, body#ifolders li.ifolders a, body#server li.server a, bod
 	clear: both;
 	height: 3em;
 	padding: 8px;
-	border: maroon 2px solid;
+	border-bottom: solid 1px #999999;
 	background-color: #ffff99;
 	text-align: center;
 }
