Fixed breadcrumb separator for Linux. Added rounded tab corners for Firefox.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6350 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/UserDetails.css
+++ b/simias/src/admin/css/UserDetails.css
@@ -59,6 +59,7 @@ ul#ifolderlisttab
 
 ul#ifolderlisttab li
 {
+	-moz-border-radius: 5px 5px 0 0;
 	float: left;
 	background-color: White;
 	border-left: solid 1px Black;
@@ -72,6 +73,7 @@ ul#ifolderlisttab li
 
 ul#ifolderlisttab a
 {
+	-moz-border-radius: 5px 5px 0 0;
 	display: block;
 	color: Black;
 	background-color: Transparent;
