https://bugzilla.novell.com/show_bug.cgi?id=170459
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6352 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -215,6 +215,12 @@ a:hover
 	padding: 0 8px 0 8px;
 }
 
+.actions .sub
+{
+	display: inline;
+	padding: 0;
+}
+
 .actions .action a
 {
 	color: #333333;
