https://bugzilla.novell.com/show_bug.cgi?id=171946 https://bugzilla.novell.com/show_bug.cgi?id=172005
added setting for page size
misc search improvements



git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6365 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -73,6 +73,7 @@ a:hover
 #header .panel .controls
 {
 	display: inline;
+	color: #C6C6C6;
 }
 
 #header .panel .controls a
@@ -139,13 +140,15 @@ a:hover
 .filterText
 {
 	width: 12em;
-	background: #FFFFFF url(../images/search-soft.png) 4px 2px no-repeat;
+	background: #FFFFFF url(../images/search.png) 2px 2px no-repeat;
+	padding-left: 22px;
 }
 
 .searchText
 {
 	width: 12em;
-	background: #FFFFFF url(../images/search-soft.png) 4px 2px no-repeat;
+	background: #FFFFFF url(../images/search.png) 2px 2px no-repeat;
+	padding-left: 22px;
 }
 
 /* nav */
@@ -332,7 +335,6 @@ table.list
 {
 	width: 98%;
 	border-collapse: collapse;
-	table-layout: fixed;
 	color: #333333;
 	empty-cells: show;
 }
@@ -452,6 +454,11 @@ td.seperator
 }
 
 /* misc */
+
+.highlight
+{
+	background-color: yellow;
+}
 
 .columns
 {
