moved some global actions to the left
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6404 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -200,17 +200,18 @@ a:hover
 
 #nav .group .box .data
 {
-	padding: 0 4px 4px 4px;
+	padding: 0 4px 4px 8px;
 }
 
 #nav .group .box .link
 {
-	padding: 0 4px 4px 4px;
+	padding: 0 4px 4px 16px;
+	text-indent: -8px;
 }
 
 #nav .group .box .label
 {
-	padding: 0 4px 0 4px;
+	padding: 0 4px 0 8px;
 	color: #999999;
 }
 
