Starting on the reporting features.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6408 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/iFolderAdmin.css
+++ b/simias/src/admin/css/iFolderAdmin.css
@@ -270,7 +270,8 @@ ul#navcontainer a:hover
 	padding: 2px 2px 0 2px;
 }
 
-body#users li.users a, body#ifolders li.ifolders a, body#server li.server a, body#system li.system a
+body#users li.users a, body#ifolders li.ifolders a, body#server li.server a, body#system li.system a,
+body#reports li.reports a
 {
 	color: Black;
 	background-color: #99CCFF;
