--- a/simias/src/admin/css/Reports.css
+++ b/simias/src/admin/css/Reports.css
@@ -1,3 +1,75 @@
-body
+.leftnav
 {
+	padding-left: 12px;
+	float: left;
+}
+
+#EnableReporting
+{
+	margin-left: 0;
+}
+
+.frequency
+{
+	float: left;
+	margin-top: 12px;
+	margin-bottom: 8px;
+	padding-left: 4px;
+	border: solid 1px #D4D0C8;
+	height: 7em;
+	width: 6em;
+}
+
+.frequency th
+{
+	text-align: left;
+}
+
+.when
+{
+	float: left;
+	margin-top: 12px;
+	margin-bottom: 8px;
+	margin-left: 12px;
+	padding-right: 12px;
+	padding-left: 4px;
+	padding-bottom: 6px;
+	border: solid 1px #D4D0C8;
+	text-align: left;
+	height: 7em;
+	width: 11em;
+}
+
+.whenlabel
+{
+	padding-left: 4px;
+	padding-right: 4px;
+}
+
+.format
+{
+	float: left;
+	margin-top: 12px;
+	margin-bottom: 8px;
+	margin-left: 12px;
+	padding-left: 4px;
+	padding-right: 12px;
+	padding-bottom: 6px;
+	border: solid 1px #D4D0C8;
+	text-align: left;
+	height: 7em;
+}
+
+.summary
+{
+	float: left;
+	clear: left;
+	padding-top: 4px;
+	padding-left: 4px;
+	margin-bottom: 8px;
+}
+
+#Time
+{
+	width: 100%;
 }
