1. added basic multi-file upload ability 2. fixed the extra modify entry when uploading a new filename
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6418 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -500,10 +500,14 @@ td.seperator
 #NewiFolderName,
 #NewiFolderDescription,
 #iFolderDescription,
-#NewFolderName,
-#UploadFile
+#NewFolderName
 {
 	width: 30em;
+}
+
+.file
+{
+	padding: 4px 0px 0px 8px;
 }
 
 #NewiFolderName
