fixed the multiple file layout in IE
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6435 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -505,9 +505,14 @@ td.seperator
 	width: 30em;
 }
 
-.file
+.files
 {
-	padding: 4px 0px 0px 8px;
+	width: 98%;
+}
+
+.files div
+{
+	padding-top: 4px;
 }
 
 #NewiFolderName
