more history information with the changing of member rights
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6455 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -481,6 +481,13 @@ td.seperator
 
 /* misc */
 
+span.rights
+{
+	font-size: 0.8em;
+	font-style: italic;
+	color: #777777;
+}
+
 .highlight
 {
 	background-color: yellow;
