https://bugzilla.novell.com/show_bug.cgi?id=182283
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6527 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -522,7 +522,7 @@ span.rights
 {
 	background: transparent url(../images/text-x-generic.png) top left no-repeat;
 	padding: 0 0 8px 22px;
-	height: 16px;
+	min-height: 16px;
 }
 
 #files div a
