--- a/simias/src/admin/css/ServerDetails.css
+++ b/simias/src/admin/css/ServerDetails.css
@@ -25,7 +25,7 @@
 .lognav
 {
 	float: left;
-	padding-right: 8px;
+	padding-right: 12px;
 	padding-left: 12px;
 	padding-bottom: 12px;
 	width: 57.5em;
@@ -52,8 +52,28 @@
 	font-size: 1em;
 }
 
-#DownloadReport
+.loglevel
 {
-	font-size: .9em;
+	float: left;
+	padding-left: 1px;
+	margin-top: 8px;
+}
+
+#LogLevelLabel
+{
+	font-weight: bolder;
+}
+
+#LogList
+{
+	float: left;
+	margin-right: 4px;
+	margin-bottom: 8px;
+}
+
+#LogText
+{
+	float:left;
+	width: 100%;
 }
 
