--- a/simias/src/admin/css/ServerDetails.css
+++ b/simias/src/admin/css/ServerDetails.css
@@ -3,6 +3,7 @@
 	padding-right: 8px;
 	padding-left: 12px;
 	float: left;
+	border-right: dotted 1px #999999;
 	width: 30em;
 }
 
@@ -10,7 +11,6 @@
 {
 	float: left;
 	padding-left: 12px;
-	border-left: dotted 1px #999999;
 	width: 25em;
 }
 
@@ -57,6 +57,7 @@
 	float: left;
 	padding-left: 1px;
 	margin-top: 8px;
+	width: 100%;
 }
 
 #LogLevelLabel
