Patch s.t. encrypted ifolders cannot be shared
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6785 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -451,6 +451,7 @@ table.list td.history
 
 /* general */
 
+
 .buttons
 {
 	padding: 16px 0 16px 0;
@@ -544,6 +545,16 @@ span.rights
 #NewiFolderName
 {
 	margin-bottom: 24px;
+}
+
+#PassPhraseText
+{
+	margin-left: 50px;
+}
+
+#VerifyPassPhraseText
+{
+	margin-left: 10px;
 }
 
 #share-users
