css/Users.css : Allow the table to consume 100% of available space
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6796 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/Users.css
+++ b/simias/src/admin/css/Users.css
@@ -1,13 +1,14 @@
 .nav
 {
 	padding-left: 12px;
+	padding-right: 12px;
 	padding-bottom: 4px;
 	float: left;
 }
 
 .accountsnav
 {
-	width: 35em;
+	width: 100%;
 }
 
 .accountslist
