Web-admin help button is enabled now
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6825 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/iFolderAdmin.css
+++ b/simias/src/admin/css/iFolderAdmin.css
@@ -81,6 +81,28 @@ a:visited
 	
 }
 
+#top .controls
+{
+	float:right ; 
+	display: inline;
+	margin-right: 2px;
+	margin-top: 2px;
+	
+}
+
+.helplinkcss
+{
+	font-size: .95em;
+	font-weight: bolder;
+	color: #000066;
+}
+
+/*.helplinkcss:visited
+{
+	color: #EFEEE9;
+}*/
+ 
+
 .detailtop
 {
 	float: left;
