changes for username display on ifolder_details page
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6826 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/iFolderDetailsPage.css
+++ b/simias/src/admin/css/iFolderDetailsPage.css
@@ -96,7 +96,13 @@
 .ifoldermembersitem3
 {
 	padding-right: 6px;
-	width: 30em;
+	width: 20em;
+}
+
+.ifoldermembersitem5
+{
+	padding-right: 6px;
+	width: 20em;
 }
 
 .ifoldermembersitem4
