--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -49,36 +49,44 @@ a:hover
 
 #header
 {
-	background: transparent url(../images/header.png) left top repeat-x;
-	height: 40px;
+	background: black url(../images/header.png) left top repeat-x;
+	height: 56px;
 	overflow: hidden;
 }
 
 #header .panel
 {
 	background: transparent url(../images/title2.png) left top no-repeat;
-	height: 40px;
-	padding: 8px;
+	height: 56px;
+//	padding-top: 37px;
+//	padding-right: 15px;
 	font-size: 0.7em;
-	text-align: right;
+
 }
 
 #header .panel .identity
 {
-	display: inline;
-	padding-right: 32px;
-	color: #C6C6C6;
+	Float: left;
+	height: 56px;
+	padding-top: 37px;
+	padding-left: 90px;
+	padding-right: 15px;
+	color: #3A3B38;
 }
 
 #header .panel .controls
 {
-	display: inline;
-	color: #C6C6C6;
+	background: transparent url(../images/Nlogo.png) right top no-repeat;
+	height: 56px;
+	padding-top: 37px;
+	padding-right: 65px;
+	color: #3A3B38;
+	text-align: right;
 }
 
 #header .panel .controls a
 {
-	color: #C6C6C6;
+	color: #3A3B38;
 }
 
 /* context */
@@ -114,17 +122,19 @@ a:hover
 
 #context .home
 {
-	width: 5em;
+	width: 5.5em;
+	font-size: 0.75em;
 }
 
 #context .sep
 {
-	width: 16px;
+	width: 10px;
 	text-align: left;
 }
 
 #context .ifolder
 {
+	font-size: 0.75em;
 }
 
 #context .home a
@@ -134,21 +144,22 @@ a:hover
 
 #context .filter, #context .search
 {
+	font-size: 0.85em;
 	text-align: right;
 }
 
 .filterText
 {
 	width: 12em;
-	background: #FFFFFF url(../images/search.png) 2px 2px no-repeat;
-	padding-left: 22px;
+	background: #FFFFFF url(../images/filter.png) 2px 2px no-repeat;
+	padding-left: 24px;
 }
 
 .searchText
 {
 	width: 12em;
-	background: #FFFFFF url(../images/search.png) 2px 2px no-repeat;
-	padding-left: 22px;
+//	background: #FFFFFF url(../images/search.png) 2px 2px no-repeat;
+	padding-left: 2px;
 }
 
 /* nav */
@@ -166,24 +177,24 @@ a:hover
 
 #nav .group
 {
-	padding: 16px 8px 0 8px;
-	font-size: 0.7em;
+	padding: 10px 8px 0 8px;
+	font-size: 0.75em;
 }
 
 #nav .group .box
 {
 	border: 1px solid #999999;
-	-moz-border-radius: 8px;
+//	-moz-border-radius: 8px;
 	background-color: #FDFDFD;
 	padding: 0;
 }
 
 #nav .group .box .title
 {
-	-moz-border-radius: 7px 7px 0 0;
+//	-moz-border-radius: 7px 7px 0 0;
 	color: #333333;
-	padding: 0 0 2px 0;
-	text-align: center;
+	padding: 2px 0 4px 4px;
+	text-align: left;
 	background-color: #C8C8C8;
 	margin-bottom: 2px;
 }
@@ -191,11 +202,15 @@ a:hover
 #nav #actions .box .title
 {
 	background-color: #C5E3C5;
+	background: transparent url(../images/title_pattern.png) left top repeat-x;
+	font-weight: bold;
 }
 
 #nav #quota .box .title
 {
-	background-color: #E3C5C5;
+	background-color: #B2CEE7;
+	background: transparent url(../images/title_pattern.png) left top repeat-x;
+	font-weight: bold;
 }
 
 #nav .group .box .data
@@ -206,22 +221,25 @@ a:hover
 #nav .group .box .link
 {
 	padding: 0 4px 4px 16px;
-	text-indent: -8px;
+	text-indent: -10px;
 }
 
 #nav .group .box .label
 {
-	padding: 0 4px 0 8px;
-	color: #999999;
+	padding: 0 4px 0 4px;
+	color: #787977;
 }
 
 /* actions */
 
 .actions
 {
-	font-size: 0.85em;
-	padding: 0 8px 8px 16px;
+	background-color: #EDEDED;
+	font-size: 0.8em;
+	padding: 2px 6px 4px 8px;
+//	border-bottom: 1px solid #999999;
 	color: #999999;
+//	margin-bottom: 4px;
 }
 
 .actions .action
@@ -232,7 +250,7 @@ a:hover
 .actions .sep
 {
 	display: inline;
-	padding: 0 8px 0 8px;
+	padding: 0 3px 0 3px;
 }
 
 .actions .sub
@@ -257,8 +275,11 @@ a:hover
 
 .section
 {
-	font-size: 1.1em;
-	padding: 8px;
+	margin-left: 10px;
+	margin-right: 10px;
+	font-size: 0.9em;
+	padding: 6px 16px 4px 8px;
+	border-bottom: 2px solid #6095c7;
 }
 
 .sub-section
@@ -281,7 +302,7 @@ div.message
 
 .tabs
 {
-	padding: 16px 0 0 8px;
+	padding: 44px 0 0 8px;
 	font-size: 0.9em;
 	overflow: hidden;
 	margin-right: -1px;
@@ -319,11 +340,11 @@ div.message
 
 .path
 {
-	font-size: 1.1em;
+	font-size: .9em;
 	padding: 2px 4px 2px 4px;
 	color: #333333;
 	margin-bottom: 8px;
-	border-bottom: 1px solid #C6C6C6;
+	border-bottom: 2px solid #6095c7;
 }
 
 .path a
@@ -341,18 +362,19 @@ div.message
 
 div.main
 {
-	padding: 12px 8px 12px 12px;
-	font-size: 0.9em;
+	padding: 12px 8px 12px 10px;
+	font-size: 0.8em;
 }
 
 /* list */
 
 table.list
 {
-	width: 98%;
+	width: 99%;
 	border-collapse: collapse;
 	color: #333333;
 	empty-cells: show;
+	font-size: 0.9em;
 }
 
 table.list tr.row
@@ -431,10 +453,15 @@ table.list td.history
 
 .pagging
 {
-	font-size: 0.9em;
-	padding: 8px 12px 8px 12px;
+	margin-top: 8px;
+	font-size: 0.95em;
+	background-color: #EDEDED;
+	background: transparent url(../images/title_pattern.png) left top repeat-x;
+	padding: 2px 12px 2px 12px;
 	text-align: center;
-	vertical-align: middle;
+	vertical-align: bottom;
+	border-top: 1px solid #999999;
+	border-bottom: 1px solid #999999;
 }
 
 .pagging .index
@@ -450,7 +477,6 @@ table.list td.history
 }
 
 /* general */
-
 
 .buttons
 {
@@ -547,16 +573,6 @@ span.rights
 	margin-bottom: 24px;
 }
 
-#PassPhraseText
-{
-	margin-left: 50px;
-}
-
-#VerifyPassPhraseText
-{
-	margin-left: 10px;
-}
-
 #share-users
 {
 	padding-right: 12px;
@@ -591,7 +607,8 @@ span.rights
 	margin-top: -100px;
 	top: 48%;
 	left: 48%;
-
+	
+	border-top: 1px solid #333333;
 	border-right: 1px solid #333333;
 	border-bottom: 1px solid #333333;
 	border-left: 1px solid #333333;
@@ -602,23 +619,31 @@ span.rights
 
 	color: #333333;
 	background: #FFFFFF url(../images/header.png) top left repeat-x;
+	font-size: .8em;
 }
 
 #login td.title
 {
-	height: 40px;
+	height: 56px;
 	background: transparent url(../images/title.png) top left no-repeat;
 }
 
 #login td.field
 {
-	padding: 0px 8px 0px 8px;
+	padding: 6px 0px 0px 6px;
 }
+
+#login td.labels
+{
+	text-align: right;
+	padding: 0px 0px 0px 8px;
+}
+
 
 #login td.message
 {
 	padding: 8px 8px 12px 8px;
-	color: #333333;
+	color: red;
 	text-align: center;
 }
 
@@ -630,7 +655,7 @@ span.rights
 #login td.button
 {
 	text-align: right;
-	padding: 8px 8px 8px 8px;
+	padding: 8px 80px 8px 8px;
 }
 
 #login td.copyright
@@ -655,4 +680,49 @@ span.rights
 	color: #FF0000;
 	font-weight: bold;
 	text-align: center;
+}
+
+.ListHead
+{
+	background-color: #C5E3C5;
+	background: transparent url(../images/title_pattern.png) left top repeat-x;
+	padding: 4px 12px 2px 8px;
+	font-size: .9em;
+	font-weight: bold;
+	height: 14px;
+	border-top: 1px solid #999999;
+	border-bottom: 1px solid #999999;
+}
+
+#share-users .ListHead, #share-members .ListHead
+{
+	margin-bottom: 6px;
+}
+
+.ColumnHead
+{
+	background-color: #EDEDED;
+	font-size: 0.8em;
+	font-weight: bold;
+	padding: 2px 6px 4px 8px;
+	border-bottom: 1px solid #999999;
+//	color: #999999;
+	margin-bottom: 4px;
+}
+
+/* Search Form */
+
+.SearchForm table, search table
+{
+	margin-bottom: 6px;
+}
+
+.SearchForm td, search td
+{
+	font-size: .9em;
+}
+
+.SearchForm td.information, .search td.information
+{
+	color: #4D6D8B;
 }
