committing this patch on johny's behalf ---- a fix for bug 270849
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6837 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/iFolderAdmin.css
+++ b/simias/src/admin/css/iFolderAdmin.css
@@ -423,3 +423,19 @@ body#reports li.reports a
 	font-weight: bold;
 }
 
+.messagepanel
+{
+	clear: both;
+	height: 3em;
+	padding: 8px;
+	border-bottom: solid 1px #999999;
+	background-color: #a3ffa3;
+	text-align: center;
+}
+
+.messagemsg
+{
+	color: Red;
+	font-weight: bold;
+}
+
