fix to put search box on search page of web-access and remove from other pages
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6843 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/webaccess/css/ifolder.css
+++ b/simias/src/webaccess/css/ifolder.css
@@ -158,8 +158,8 @@ a:hover
 .searchText
 {
 	width: 12em;
-//	background: #FFFFFF url(../images/search.png) 2px 2px no-repeat;
-	padding-left: 2px;
+	background: #FFFFFF url(../images/filter.png) 2px 2px no-repeat;
+	padding-left: 24px;
 }
 
 /* nav */
