Orphaned iFolder utility added for web-admin to handle orphaned iFolders against bug id 284175
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@6871 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/admin/css/iFolderDetailsPage.css
+++ b/simias/src/admin/css/iFolderDetailsPage.css
@@ -43,6 +43,13 @@
 	overflow: visible;
 }
 
+.selectownerbuttons
+{
+	width: 7.5em;
+	color: black;
+}
+
+
 .ifoldermemberlistnav
 {
 	float: left;
@@ -119,6 +126,12 @@
 {
 	margin-top: 6px;
 	margin-right: 2px;
+}
+
+#DescriptionButton
+{
+	margin-left: 6px;
+	width: 10.5em;
 }
 
 #MemberDeleteButton
