--- a/simias/src/admin/css/iFolders.css
+++ b/simias/src/admin/css/iFolders.css
@@ -6,6 +6,62 @@
 	float: left;
 }
 
+
+.ifoldertabnav
+{
+	height: 1.5em;
+	border-bottom: solid 1px Black;
+}
+
+ul#ifolderlisttab
+{
+	list-style-type: none;
+	margin: 0;
+	font-weight: bold;
+	font-size: .75em;
+	padding-left: 6em;
+}
+ 
+ul#ifolderlisttab li
+{
+	-moz-border-radius: 5px 5px 0 0;
+	float: left;
+	background-color: White;
+	border-left: solid 1px Black;
+	border-right: solid 1px Black;
+	border-top: solid 1px Black;
+	color: Black;
+	margin: 2px 2px 0 2px;
+	width: 6.5em;
+	text-align: center;
+}
+
+ul#ifolderlisttab a
+{
+	-moz-border-radius: 5px 5px 0 0;
+	display: block;
+	color: Black;
+	background-color: Transparent;
+	padding: 3px 3px 0 3px;
+	text-decoration: none;
+}
+
+ul#ifolderlisttab a:hover
+{
+	background: #716F64;
+	color: White;
+}
+
+div#all li.allifolders a:link, div#all li.allifolders a:visited,
+div#orphaned li.orphanedifolders a:link, div#orphaned li.orphanedifolders a:visited
+{
+	color: Black;
+	background-color: #EFEEE9;
+	border-bottom: 1px solid #EFEEE9;
+}
+
+
+
 .searchnav
 {
 	clear: both;
